[package]
name = "monster"
version = "0.0.0"
edition = "2021"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_System_Performance",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"
]

[build-dependencies]
embed-resource = "1.7"
