[package]
name = "clock"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
rand = "0.8.5"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_System_Performance",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging_D2D",
    "Win32_System_SystemServices",
]

[build-dependencies]
embed-resource = "1.7"
